--- a/PokemonGo-UWP.Tests/PokemonGo-UWP.Tests.csproj
+++ b/PokemonGo-UWP.Tests/PokemonGo-UWP.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -119,7 +119,6 @@
     <Content Include="TestAssets\SplashScreen.scale-200.png" />
     <Content Include="TestAssets\Square150x150Logo.scale-200.png" />
     <Content Include="TestAssets\Square44x44Logo.scale-200.png" />
-    <Content Include="TestAssets\Square44x44Logo.png" />
     <Content Include="TestAssets\StoreLogo.png" />
     <Content Include="TestAssets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
