--- a/PokemonGo-UWP/project.json
+++ b/PokemonGo-UWP/project.json
@@ -1,10 +1,11 @@
-﻿{
+{
   "dependencies": {
     "HockeySDK.UWP": "4.1.3",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Newtonsoft.Json": "9.0.1",
     "NotificationsExtensions.Win10": "14332.0.2",
     "Octokit": "0.21.1",
+    "S2Geometry": "1.0.3",
     "Template10": "1.1.12-preview-160712",
     "UniversalMapControl": "0.3.40",
     "WinRTXamlToolkit.Controls.Gauge.UWP": "2.0.0",
@@ -15,11 +16,11 @@
     "uap10.0": {}
   },
   "runtimes": {
-    "win10-arm": { },
-    "win10-arm-aot": { },
-    "win10-x86": { },
-    "win10-x86-aot": { },
-    "win10-x64": { },
-    "win10-x64-aot": { }
+    "win10-arm": {},
+    "win10-arm-aot": {},
+    "win10-x86": {},
+    "win10-x86-aot": {},
+    "win10-x64": {},
+    "win10-x64-aot": {}
   }
 }
