--- a/PokemonGo-UWP/PokemonGo-UWP.csproj
+++ b/PokemonGo-UWP/PokemonGo-UWP.csproj
@@ -883,6 +883,7 @@
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
+    <Content Include="Assets\SplashScreenPhone.scale-240.png" />
     <Content Include="Assets\LiveTiles\Normal\Square150x150Logo.scale-200.png" />
     <Content Include="Assets\LiveTiles\Normal\Square44x44Logo.scale-200.png" />
     <Content Include="Assets\StoreLogo.png" />
