--- a/PokemonGo-UWP/PokemonGo-UWP.csproj
+++ b/PokemonGo-UWP/PokemonGo-UWP.csproj
@@ -313,7 +313,7 @@
     <Content Include="Assets\Square44x44Logo.png" />
     <Content Include="Assets\UI\night_sky_texture_by_amdillon.jpg" />
     <Content Include="Assets\Pokemons\1.png" />
-    <Content Include="Assets\Pokemons\10.png" />
+    <Content Include="Assets\Pokemons\10.gif" />
     <Content Include="Assets\Pokemons\100.png" />
     <Content Include="Assets\Pokemons\101.png" />
     <Content Include="Assets\Pokemons\102.png" />
