--- a/PokemonGoAPI/PokemonGoAPI.csproj
+++ b/PokemonGoAPI/PokemonGoAPI.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>PokemonGoAPI</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.10586.0</TargetPlatformVersion>
+    <TargetPlatformVersion>10.0.14393.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.10240.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
@@ -128,14 +128,20 @@
     <Compile Include="Exceptions\InvalidResponseException.cs" />
     <Compile Include="Exceptions\LoginFailedException.cs" />
     <Compile Include="Exceptions\PTCOfflineException.cs" />
+    <Compile Include="Extensions\CookieContainerExtensions.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
-    <Compile Include="Helpers\Crypt.cs" />
+    <Compile Include="Helpers\Crypt\NiaHash.cs" />
+    <Compile Include="Helpers\Crypt\PCrypt.cs" />
+    <Compile Include="Helpers\Crypt\Shuffle2.cs" />
+    <Compile Include="Helpers\Crypt\Unshuffle.cs" />
+    <Compile Include="Helpers\Crypt\Unshuffle2.cs" />
     <Compile Include="Helpers\IDeviceInfos.cs" />
     <Compile Include="Helpers\JsonHelper.cs" />
     <Compile Include="Helpers\RandomHelper.cs" />
     <Compile Include="Helpers\RequestBuilder.cs" />
     <Compile Include="Helpers\RetryHandler.cs" />
     <Compile Include="Helpers\S2Helper.cs" />
+    <Compile Include="Helpers\UInt128.cs" />
     <Compile Include="Helpers\Utils.cs" />
     <Compile Include="Helpers\Vector.cs" />
     <Compile Include="Interfaces\IApiFailureStrategy.cs" />
@@ -393,9 +399,6 @@
     <Compile Include="Rpc\Map.cs" />
     <Compile Include="Rpc\Misc.cs" />
     <Compile Include="Rpc\Player.cs" />
-    <Compile Include="Helpers\xxHash\ArrayData.cs" />
-    <Compile Include="Helpers\xxHash\UnifiedData.cs" />
-    <Compile Include="Helpers\xxHash\xxHash.cs" />
     <Compile Include="Session\AccessToken.cs" />
     <Compile Include="Session\ApiFailureStrategy.cs" />
     <EmbeddedResource Include="Properties\PokemonGoAPI.rd.xml" />
